--- a/app/globals.css
+++ b/app/globals.css
@@ -7,3 +7,13 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+html {
+  background-color: white;
+  
+}
+
+html.dark {
+  background-color: black;
+
+}
